fix text alignment

--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ main .quad-text {
   margin-top: 8px;
   font-size: 20px;
   line-height: 1.4;
-  margin-left: 525px;
+  margin-left: 615px;
   /* color: #444; */
   text-align: left;
 }
